add :renamesheet COMMAND_MODE command
created movetosheet command in gram.y, to be used internally or in scripts when saving
and loading files.
reeval in multiple sheets: graph now should keep track of the different sheets
             reference cells from different sheets in formulas: ={"Sheet2"}!A2
Save triggers in files
** Added automated tests
C command in EDIT MODE

Changes:
--------
+ Adapt string and number search for multisheet
+ marks now considers sheet. We could have mark A in Sheet 1, and mark B on Sheet 2..
  modified tick() and fix_marks()
Renamed auto_justify to auto_fit
`gt` command of NORMAL_MODE renamed to `go`
Removed --sheet and --filename_with_mode configuration variables
UNDO now saves reference to the sheet where the action took place.
+ copy_to_undostruct() now keep in added/removed list struct ent_ptr *
  (that knows of sheets), rather than struct ent *.
Copy alignment of strings when doing `Pf`.
 undo: save maxrow, maxcol, modflg values before and after changes, so they can be restored after undo/redo actions
Modified yanklist to be struct ent_ptr list, rather thant struct ent list.
Ents_that_depends_on_list now takes ent_ptr rather than struct ent * as parameter
Backslash double quotes in cpaste. Issue 574.
Do not free ents of sheets when deleting a sheet manually (only at exit).  just mark them as deleted.
Inform old value and new value when changing configuration variable
UI optimizations
Store offscr_sc values when saving sc files. Restore them when loading sc files
Simplify clipboard code
xlsx.c: Convert to uppercase before replacing functions
Added D command on EDIT mode.
ESC in EDIT_MODE also confirm changes.
Reeval when pasting from clipboard and autocalc is set
Adjust Makefile to have logic for clipboard commands on MacOS


Fixes
-----
** fix in calc_mobile_cols()
** fix not updating graph correctly after yanking cells with references -> Pc -> undo.
   It could also segfault on ocassions as well. Added test5 and test6 for this.
